@@ -1,5 +1,5 @@
-AUX 1.0.1269-Makefile.patch 2151 RMD160 26bbcaea9d3436c0f5265b859f43a616b7fbd535 SHA1 3d5d207cf0d5fa786b9dedc31daadaaae40dcbfd SHA256 f26c1cd5c84f4a47763f2ec456809187fc267644ce1cc80cc359be31240cb5dd
+AUX 1.0.1269-Makefile.patch 2096 RMD160 35905a7e666f24ac8f65362e91be381bea3a3a2b SHA1 a76b329651a326d2cbb50a586a51c1fda5685ff3 SHA256 7a350ebebce9edaf7f63eee9d78ce873994bb7ff0aa3f56e5d224436a893dc1c
 DIST roadfighter.src_1.0.1269.tgz 4724447 RMD160 b5b483a4bb7d50468c74a45defd00b01753ff7b0 SHA1 e6cacf74065fcd27838c66b4c57998f9fdbc2874 SHA256 c6ed315c4b2bf25d598ffa6b5dfd471e7f187ff29b86fd3213054fb6be7c57e7
 EBUILD roadfighter-1.0.1269.ebuild 810 RMD160 7a12911ef65318a27789a33e25f0292d892255d7 SHA1 770b40796430855d417a65a3c5ad71cc67151c11 SHA256 8e070ac4926ad4cadf584c9ad13ee870d52e903fc624f2f6b3acf624a7f1b95d
-MISC ChangeLog 385 RMD160 a54d56f0a4ac030099623ec7a0f1e78f338fc8db SHA1 5bf79ceda09706b7e85bd4a88d4550d1f3089e6e SHA256 b5e798c1867cba3cd9fb40cc3a1cf5ab5d2f54d9a0871a5c54a1cf4e799f8273
+MISC ChangeLog 514 RMD160 5e472aef9bd46112711ba38cdd526b45e12eb2ee SHA1 5b30c1746c8699c4b1dc3ecd854a4c1415a67043 SHA256 ad1c3d1873f76c7909983de85a0956b652e90e50544b950e2561d046e7f026db
 MISC metadata.xml 247 RMD160 e6b25bfa3980cc1cc9e732b67f457fe2a2e9863c SHA1 4353118d4852f2d7ba4ccbbbb06bbf9fcfd25d24 SHA256 883dd20701cb074b79a6a73acfa6f7e6c5a0dcafba8f506da3ac324327300d68
